--- a/README
+++ b/README
@@ -90,3 +90,29 @@ phase_5解法：
 经过推理发现%eax应取5
 也就是参数1取16模余数为5
 参数2的话设置断点break *phase_5+101看%ecx的值吧
+
+phase_6解法：
+简单来说就是对链表从小到大排序
+链表布局：
+<node1>: 283 1 下一个节点的地址
+<node2>: 443 2 下一个节点的地址
+<node3>: 828 3 下一个节点的地址
+<node4>: 535 4 下一个节点的地址
+<node5>: 103 5 下一个节点的地址
+<node6>: 674 6 空地址
+链表结构：
+struct node {
+    int value;
+    int id;
+    struct node *next;
+} 占12字节
+输入的参数是几就代表第几个节点
+当然参数也有约束
+1、参数小于等于6（这是当然，只有6个node）
+ 8048dda:	83 f8 05             	cmp    $0x5,%eax						#%eax=参数1 - 1，
+ 8048ddd:	76 05                	jbe    8048de4 <phase_6+0x2f>			#%eax小于等于5不炸，参数1<=6。循环着发现所有参数都
+2、参数不能重复：
+ 8048e0b:	8b 44 24 0c          	mov    0xc(%esp),%eax					#%eax=参数1
+ 8048e0f:	8b 00                	mov    (%eax),%eax						#%eax=*(%eax)
+ 8048e11:	39 44 24 08          	cmp    %eax,0x8(%esp)					#*(%eax)和参数2比较
+ 8048e15:	74 05                	je     8048e1c <phase_6+0x67>			#相等爆炸
